--- a/ajax1.html
+++ b/ajax1.html
@@ -7,9 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ajax 1</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <script>
+        $(document).ready(function() {
+            //peticion ajax
+            //$.get('url',function(){},'json');
+            /*for (let i = 0; i < 100; i++) {
+                $('.container').append('<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/' + i + '.png alt="bulbasaur">');
+            }*/
+
+            $.get('https://pokeapi.co/api/v2/pokemon/150/', function(respuesta) {
+                //procesar la respuesta
+                console.log(respuesta);
+                console.log(respuesta.sprites);
+                console.log(respuesta.sprites.front_default);
+                let imagen = respuesta.sprites.front_default;
+                $('.container').append('<img src="" alt="">');
+            }, 'json');
+        });
+    </script>
 </head>
 
 <body>
+    <div class="container">
+        <!--
+        /<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/1.png">
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/2.png">
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/3.png">
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/4.png">
+        -->
+    </div>
 
 </body>
 
